--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,31 @@
 Package: neuralnetr
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
-Encoding: UTF-8
+Title: Neural Nets in R
+Version: 0.9.0
+Authors@R: 
+    c(person(given = "Frederik",
+             family = "Lassen",
+             role = c("aut", "cre"),
+             email = "flassen@broadinstitute.org"))
+Maintainer: Frederik Lassen <flassen@broadinstitute.org>
+Description: An open-source software for making deep neural networks using R6 methods and base R.
+License: MIT + file LICENSE
 LazyData: true
-Suggests: 
-    testthat (>= 2.1.0)
+Depends:
+    R (>= 3.6),
+    R6
+Suggests:
+    devtools,
+    testthat (>= 2.1.0),
+Imports:
+    R6
+Encoding: UTF-8
 RoxygenNote: 7.0.2
+Collate: 
+    'Linear.R'
+    'misc.R'
+    'Module.R'
+    'NLL.R'
+    'ReLU.R'
+    'Sequential.R'
+    'SoftMax.R'
+    'Tanh.R'
