--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ReLU)
 export(Sequential)
 export(Sigmoid)
 export(SoftMax)
+export(SquaredLoss)
 export(Tanh)
 export(classify_2d_grid)
 export(plot_tidy_2d)
