--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 # Use R
 language: r
-#cache: packages
+cache: packages
 warnings_are_errors: false
 
 # test multiple operating systems
 os:
-  - osx
+  - linux
 
 # environment variables set for all builds
 env:
