updated documentation .rd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(Sequential)
 export(Sigmoid)
 export(SoftMax)
 export(SquaredLoss)
+export(Tanh)
 export(classify_2d_grid)
 export(plot_tidy_2d)
