fixed error in experiment 1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(SoftMax)
 export(SquaredLoss)
 export(Tanh)
 export(classify_2d_grid)
+export(onehot)
 export(plot_tidy_2d)
 export(standardize)
